--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ markdown: kramdown
 
 greeting: "Welcome"
 headline: "Handmade guitars and basses for passion and hobby. Based in Rome, Italy."
-
+logo: assets/images/logo.svg
 
 image: /assets/img/og-image.png
 
